// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-comment"
  >
    <div
      class="t-comment__inner"
    >
      <div
        class="t-comment__avatar"
      >
        <img
          alt=""
          class="t-comment__avatar-image"
          src="https://tdesign.gtimg.com/list-icon.png"
        />
      </div>
      <div
        class="t-comment__content"
      >
        <div
          class="t-comment__author"
        >
          <span
            class="t-comment__name"
          >
            评论作者名
          </span>
          <span
            class="t-comment__time"
          >
            今天16:38
          </span>
        </div>
        <div
          class="t-comment__detail"
        >
          评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容。
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`list.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list"
  >
    <ul
      class="t-list__inner"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-comment"
          >
            <div
              class="t-comment__inner"
            >
              <div
                class="t-comment__avatar"
              >
                <img
                  alt=""
                  class="t-comment__avatar-image"
                  src="https://tdesign.gtimg.com/list-icon.png"
                />
              </div>
              <div
                class="t-comment__content"
              >
                <div
                  class="t-comment__author"
                >
                  <span
                    class="t-comment__name"
                  >
                    评论作者名A
                  </span>
                  <span
                    class="t-comment__time"
                  >
                    今天16:38
                  </span>
                </div>
                <div
                  class="t-comment__detail"
                >
                  A评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容。
                </div>
                <ul
                  class="t-comment__actions"
                >
                  <li>
                    <span>
                      <i
                        class="t-icon t-icon-thumb-up"
                      />
                      <span
                        style="display: inline-block; margin-left: 6px; line-height: 15px;"
                      >
                        6
                      </span>
                    </span>
                  </li>
                  <li>
                    <span>
                      <i
                        class="t-icon t-icon-chat"
                      />
                      <span
                        style="display: inline-block; margin-left: 6px; line-height: 15px;"
                      >
                        回复
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-comment"
          >
            <div
              class="t-comment__inner"
            >
              <div
                class="t-comment__avatar"
              >
                <img
                  alt=""
                  class="t-comment__avatar-image"
                  src="https://tdesign.gtimg.com/list-icon.png"
                />
              </div>
              <div
                class="t-comment__content"
              >
                <div
                  class="t-comment__author"
                >
                  <span
                    class="t-comment__name"
                  >
                    评论作者名B
                  </span>
                  <span
                    class="t-comment__time"
                  >
                    今天16:38
                  </span>
                </div>
                <div
                  class="t-comment__detail"
                >
                  B评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容。
                </div>
                <ul
                  class="t-comment__actions"
                >
                  <li>
                    <span>
                      <i
                        class="t-icon t-icon-thumb-up"
                      />
                      <span
                        style="display: inline-block; margin-left: 6px; line-height: 15px;"
                      >
                        6
                      </span>
                    </span>
                  </li>
                  <li>
                    <span>
                      <i
                        class="t-icon t-icon-chat"
                      />
                      <span
                        style="display: inline-block; margin-left: 6px; line-height: 15px;"
                      >
                        回复
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-comment"
          >
            <div
              class="t-comment__inner"
            >
              <div
                class="t-comment__avatar"
              >
                <img
                  alt=""
                  class="t-comment__avatar-image"
                  src="https://tdesign.gtimg.com/list-icon.png"
                />
              </div>
              <div
                class="t-comment__content"
              >
                <div
                  class="t-comment__author"
                >
                  <span
                    class="t-comment__name"
                  >
                    评论作者名C
                  </span>
                  <span
                    class="t-comment__time"
                  >
                    今天16:38
                  </span>
                </div>
                <div
                  class="t-comment__detail"
                >
                  C评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容。
                </div>
                <ul
                  class="t-comment__actions"
                >
                  <li>
                    <span>
                      <i
                        class="t-icon t-icon-thumb-up"
                      />
                      <span
                        style="display: inline-block; margin-left: 6px; line-height: 15px;"
                      >
                        6
                      </span>
                    </span>
                  </li>
                  <li>
                    <span>
                      <i
                        class="t-icon t-icon-chat"
                      />
                      <span
                        style="display: inline-block; margin-left: 6px; line-height: 15px;"
                      >
                        回复
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-comment"
  >
    <div
      class="t-comment__inner"
    >
      <div
        class="t-comment__avatar"
      >
        <img
          alt=""
          class="t-comment__avatar-image"
          src="https://tdesign.gtimg.com/list-icon.png"
        />
      </div>
      <div
        class="t-comment__content"
      >
        <div
          class="t-comment__author"
        >
          <span
            class="t-comment__name"
          >
            评论作者名
          </span>
          <span
            class="t-comment__time"
          >
            今天16:38
          </span>
        </div>
        <div
          class="t-comment__detail"
        >
          评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容。
        </div>
        <ul
          class="t-comment__actions"
        >
          <li>
            <span>
              <i
                class="t-icon t-icon-thumb-up"
              />
              <span
                style="display: inline-block; margin-left: 6px; line-height: 15px;"
              >
                6
              </span>
            </span>
          </li>
          <li>
            <span>
              <i
                class="t-icon t-icon-chat"
              />
              <span
                style="display: inline-block; margin-left: 6px; line-height: 15px;"
              >
                回复
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`quote.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-comment"
  >
    <div
      class="t-comment__inner"
    >
      <div
        class="t-comment__avatar"
      >
        <img
          alt=""
          class="t-comment__avatar-image"
          src="https://tdesign.gtimg.com/list-icon.png"
        />
      </div>
      <div
        class="t-comment__content"
      >
        <div
          class="t-comment__author"
        >
          <span
            class="t-comment__name"
          >
            评论作者名A
          </span>
          <span
            class="t-comment__time"
          >
            今天16:38
          </span>
        </div>
        <div
          class="t-comment__detail"
        >
          A评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容。
        </div>
        <div
          class="t-comment__quote"
        >
          <div
            class="t-comment"
          >
            <div
              class="t-comment__inner"
            >
              <div
                class="t-comment__content"
              >
                <div
                  class="t-comment__author"
                >
                  <span
                    class="t-comment__name"
                  >
                    引用内容标题
                  </span>
                </div>
                <div
                  class="t-comment__detail"
                >
                  引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容引用内容。
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          class="t-comment__actions"
        >
          <li>
            <span>
              <i
                class="t-icon t-icon-thumb-up"
              />
              <span
                style="display: inline-block; margin-left: 6px; line-height: 15px;"
              >
                6
              </span>
            </span>
          </li>
          <li>
            <span>
              <i
                class="t-icon t-icon-chat"
              />
              <span
                style="display: inline-block; margin-left: 6px; line-height: 15px;"
              >
                回复
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`reply.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-comment"
  >
    <div
      class="t-comment__inner"
    >
      <div
        class="t-comment__avatar"
      >
        <img
          alt=""
          class="t-comment__avatar-image"
          src="https://tdesign.gtimg.com/list-icon.png"
        />
      </div>
      <div
        class="t-comment__content"
      >
        <div
          class="t-comment__author"
        >
          <span
            class="t-comment__name"
          >
            评论作者名A
          </span>
          <span
            class="t-comment__time"
          >
            今天16:38
          </span>
        </div>
        <div
          class="t-comment__detail"
        >
          A评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容。
        </div>
        <ul
          class="t-comment__actions"
        >
          <li>
            <span>
              <i
                class="t-icon t-icon-thumb-up"
              />
              <span
                style="display: inline-block; margin-left: 6px; line-height: 15px;"
              >
                6
              </span>
            </span>
          </li>
          <li>
            <span>
              <i
                class="t-icon t-icon-chat"
              />
              <span
                style="display: inline-block; margin-left: 6px; line-height: 15px;"
              >
                回复
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="t-comment__reply"
    >
      <div
        class="t-comment"
      >
        <div
          class="t-comment__inner"
        >
          <div
            class="t-comment__avatar"
          >
            <img
              alt=""
              class="t-comment__avatar-image"
              src="https://tdesign.gtimg.com/list-icon.png"
            />
          </div>
          <div
            class="t-comment__content"
          >
            <div
              class="t-comment__author"
            >
              <span
                class="t-comment__name"
              >
                <span>
                  评论作者名B
                </span>
                <i
                  class="t-icon t-icon-caret-right-small t-size-s"
                  style="display: inline-block; margin: 0px 4px;"
                />
                <span>
                  评论作者名A
                </span>
              </span>
              <span
                class="t-comment__time"
              >
                今天16:38
              </span>
            </div>
            <div
              class="t-comment__detail"
            >
              B评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容评论内容。
            </div>
            <ul
              class="t-comment__actions"
            >
              <li>
                <span>
                  <i
                    class="t-icon t-icon-thumb-up"
                  />
                  <span
                    style="display: inline-block; margin-left: 6px; line-height: 15px;"
                  >
                    6
                  </span>
                </span>
              </li>
              <li>
                <span>
                  <i
                    class="t-icon t-icon-chat"
                  />
                  <span
                    style="display: inline-block; margin-left: 6px; line-height: 15px;"
                  >
                    回复
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`reply-form.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-comment"
  >
    <div
      class="t-comment__inner"
    >
      <div
        class="t-comment__avatar"
      >
        <img
          alt=""
          class="t-comment__avatar-image"
          src="https://tdesign.gtimg.com/list-icon.png"
        />
      </div>
      <div
        class="t-comment__content"
      >
        <div
          class="t-comment__detail"
        >
          <div
            style="display: flex; flex-direction: column; align-items: flex-end;"
          >
            <div
              class="t-textarea"
            >
              <textarea
                class="t-textarea__inner"
                placeholder="请输入内容"
                style="height: auto; min-height: auto;"
              />
            </div>
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              type="button"
            >
              <span
                class="t-button__text"
              >
                回复
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
